--- a/src/components/home-svg/BathDog.scss
+++ b/src/components/home-svg/BathDog.scss
@@ -20,7 +20,7 @@
   height:550px;
   background-image: linear-gradient(to bottom,  rgba(76, 198, 255, 0.6) 0%,rgba(13, 126, 255, 0.6) 50%),url("https://images.unsplash.com/photo-1601108194993-9eadcc54815b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1042&q=80");
   // background:#FCD7B9;
-  margin:10px auto;
+  margin:0.4em auto;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
